Update text on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Привіт із CI/CD :)</h1>
-  <p>Це простий веб-застосунок, задеплоєний через GitHub Actions.</p>
+  <h1>Hello from CI/CD :)</h1>
+  <p>This is a simple web application deployed via GitHub Actions.</p>
 </body>
 </html>
