Update UI text to test Watchtower auto-deploy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Hello from CI/CD :)</h1>
-  <p>This is a simple web application deployed via GitHub Actions. This is update version.</p>
+  <p>This is a simple web application deployed via GitHub Actions. This is update version. One more update.</p>
 </body>
 </html>
